--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,9 +1,11 @@
 env:
   node: true
-  commonjs: true
   es2021: true
+plugins:
+  - jest
 extends:
   - airbnb-base
+  - 'plugin:jest/recommended'
 parserOptions:
   ecmaVersion: 12
 rules: {}
