--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Eyvgeniy/backend-project-lvl3/workflows/hexlet-check/badge.svg)](https://github.com/Eyvgeniy/backend-project-lvl3/actions)",
-  "main": "index.js",
+  "bin": {
+    "page-loader": "bin/page-loader.js"
+  },
+  "engines": {
+    "node": ">=14"
+  },
+  "type": "module",
   "scripts": {
     "lint": "npx eslint .",
     "test": "jest"
@@ -16,8 +22,13 @@
   "bugs": {
     "url": "https://github.com/Eyvgeniy/backend-project-lvl3/issues"
   },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
+  },
   "homepage": "https://github.com/Eyvgeniy/backend-project-lvl3#readme",
   "dependencies": {
+    "@hexlet/code": "file:",
     "axios": "^0.21.0",
     "commander": "^6.2.0"
   },
@@ -25,6 +36,7 @@
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
     "nock": "^13.0.5"
   }
