--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@hexlet/code": "file:",
     "axios": "^0.21.0",
+    "cheerio": "^1.0.0-rc.3",
     "commander": "^6.2.0"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
-    "nock": "^13.0.5"
+    "nock": "^13.0.5",
+    "prettier": "^2.2.0"
   }
 }
