--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "type": "module",
   "scripts": {
     "lint": "npx eslint .",
-    "test": "jest"
+    "test": "jest --colors"
   },
   "repository": {
     "type": "git",
