--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "axios-debug-log": "^0.8.2",
     "cheerio": "^1.0.0-rc.3",
     "commander": "^6.2.0",
-    "debug": "^4.3.1"
+    "debug": "^4.3.1",
+    "listr": "^0.14.3"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
