--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "cheerio": "^1.0.0-rc.3",
     "commander": "^6.2.0",
     "debug": "^4.3.1",
-    "listr": "^0.14.3"
+    "listr": "^0.14.3",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
@@ -42,7 +43,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
-    "nock": "^13.0.5",
-    "prettier": "^2.2.0"
+    "nock": "^13.0.5"
   }
 }
