--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "cheerio": "^1.0.0-rc.3",
     "commander": "^6.2.0",
     "debug": "^4.3.1",
-    "listr": "^0.14.3"
+    "listr": "^0.14.3",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
